version 0.0.26 Source compatability moved to 1.8. Changed encode and decode methods in Base64Util to use java.util.Base64 and its UrlEncoder. fixed failing tests.